# UxAPI

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md
sgfx/: CMakeLists.txt  sgfx.cmake
sgfx/include/: CMakeLists.txt  sgfx.h  sgfx_font_types.h  sgfx_types.h
sgfx/include/sgfx/: sgfx.h
sgfx/src/: sg.c  sg_animate.c  sg_antialias_filter.c  sg_api.c  sg_config.h  sg_cursor.c  sg_draw.c  sg_point.c  sg_transform.c  sg_vector.c
tests/: CMakeLists.txt
tests/src/: UnitTest.hpp  main.cpp
